page loading animation mobile fix

--- a/scss/_page_loader.scss
+++ b/scss/_page_loader.scss
@@ -15,6 +15,6 @@
 .load-finish{
     @include fade-out();
     pointer-events: none;
-    opacity: 0;
+    opacity: 0 !important;
 
 }
